--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firebase-react-chat-demo",
   "version": "0.1.0",
-  "homepage": "http://demos.bblk.pl/firebase-react-chat-demo",
+  "homepage": "http://bblk.pl/demos/firebase-react-chat-demo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
