--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-firebase-hooks": "^2.2.0",
     "react-linkify": "^1.0.0-alpha",
     "react-scripts": "3.4.3",
+    "react-social-login-buttons": "^3.1.0",
     "reset-css": "^5.0.1"
   },
   "scripts": {
