--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^2.2.0",
     "react-linkify": "^1.0.0-alpha",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-social-login-buttons": "^3.1.0",
-    "reset-css": "^5.0.1"
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.0",
+    "styled-reset": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
